--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,13 +13,13 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
-      - backend
+      - church-manager-network
 
   app:
     build: .
-    container_name: spring_app
+    container_name: events-spring-app
     ports:
-      - "8080:8080"
+      - "8081:8080"
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/events_db
       SPRING_DATASOURCE_USERNAME: admin
@@ -29,7 +29,7 @@ services:
     depends_on:
       - postgres
     networks:
-      - backend
+      - church-manager-network
     volumes:
       - ./:/app/src
       - ./target:/app/target
@@ -38,4 +38,5 @@ volumes:
   pgdata:
 
 networks:
-  backend:
+  church-manager-network:
+    external: true
