--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Church-manage]
+spring.application.name=Church-manager
 spring.datasource.url=jdbc:postgresql://localhost:5432/events_db
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=admin    
