--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,13 @@
 spring.application.name=Church-manager
-spring.datasource.url=jdbc:postgresql://localhost:5432/events_db
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://postgres_local:5432/events_db
 spring.datasource.username=admin
-spring.datasource.password=admin    
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true    
